# webmvc

./: webmvc.cabal
.github/workflows/: ci.yml
src/: WebMVC.hs
src/WebMVC/: Diff.hs  LevenShteinDistance.hs  Types.hs  Util.hs
src/WebMVC/Html/: Element.hs
test/: LevSpec.hs
webmvc-devel/: Main.hs
